--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGOURL=mongodb+srv://mukesh-kkkk:hoMkwxINH7zq0u4I@cluster0.muvo4vw.mongodb.net/?retryWrites=true&w=majority
+MONGOURL=mongodb+srv://mukesh-kkkk:hoMkwxINH7zq0u4I@cluster0.muvo4vw.mongodb.net/nbyula?retryWrites=true&w=majority
 APP_PORT=8000
